manifests/deployment.yaml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    creationTimestamp: 2018-06-11T17:29:04Z
    generation: 1
    labels:
      run: statefulapp
    name: statefulapp
    namespace: default
    resourceVersion: "565044"
    selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/statefulapp
    uid: f0090fea-6d9c-11e8-bd03-0632d98bf242
  spec:
    replicas: 0
    selector:
      matchLabels:
        run: statefulapp
    strategy:
      rollingUpdate:
        maxSurge: 1
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          run: statefulapp
          app: statefulapp
      spec:
        containers:
        - image: krisnova/stateful_app
          imagePullPolicy: Always
          name: statefulapp
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
