manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: statefulapp-service
spec:
  type: LoadBalancer
  selector:
    app: statefulapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
